Solve issue with overflow showing on mobile

--- a/static/css/mixxx.css
+++ b/static/css/mixxx.css
@@ -1,6 +1,7 @@
 html, body {
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
 }
 
 body
@@ -372,15 +373,11 @@ h2 a {
  * prefixes.
  */
 
-body
-{
-  overflow-x: hidden; /* needed because hiding the menu on the right side is not perfect,  */
-}
-
 #hamburger_wrap {
     display: none;
     text-align: left;
     z-index: 8;
+    overflow-x:hidden;
 }
 
 #hamburger_wrap a
